--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "normalize.css": "^6.0.0",
     "react": "~15.4.2",
     "react-dom": "~15.4.2",
+    "react-emoji": "^0.4.4",
     "react-redux": "~5.0.3",
     "react-router-dom": "^4.0.0",
     "redux": "~3.6.0",
