--- a/package.json
+++ b/package.json
@@ -2,25 +2,24 @@
   "name": "Minesweeper",
   "version": "1.0.0",
   "dependencies": {
-    "normalize.css": "^6.0.0",
-    "react": "~15.4.2",
-    "react-dom": "~15.4.2",
-    "react-emoji": "^0.4.4",
-    "react-redux": "~5.0.3",
-    "react-router-dom": "^4.0.0",
-    "redux": "~3.6.0",
-    "redux-thunk": "~2.2.0"
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.0",
+    "lodash.clonedeep": "^4.5.0",
+    "prettier": "^1.15.3",
+    "prop-types": "^15.6.2",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-emoji": "^0.5.0",
+    "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^2.1.3",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^4.1.3",
+    "styled-normalize": "^8.0.4"
   },
   "devDependencies": {
-    "babel-eslint": "^7.1.1",
-    "eslint": "^3.16.1",
-    "eslint-config-react-app": "^0.6.2",
-    "eslint-plugin-flowtype": "^2.21.0",
-    "eslint-plugin-import": "^2.0.1",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.4.1",
-    "react-scripts": "0.9.5",
-    "now": "^4.11.0"
+    "eslint-config-airbnb": "^17.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,7 +27,24 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "eslint src/*",
+    "prettier": "prettier --single-quote --write",
     "predeploy": "yarn build",
     "deploy": "now"
-  }
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --trailing-comma --single-quote --write",
+      "git add"
+    ]
+  },
+  "browserslist": [
+    ">0.2%",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
