--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "Minesweeper",
   "version": "1.0.0",
   "dependencies": {
+    "add": "^2.0.6",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.0",
     "lodash.clonedeep": "^4.5.0",
     "prettier": "^1.15.3",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
+    "react-div-100vh": "^0.3.2",
     "react-dom": "^16.7.0",
     "react-emoji": "^0.5.0",
     "react-redux": "^6.0.0",
@@ -16,10 +18,13 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.1.3",
-    "styled-normalize": "^8.0.4"
+    "styled-normalize": "^8.0.4",
+    "yarn": "^1.13.0"
   },
   "devDependencies": {
-    "eslint-config-airbnb": "^17.1.0"
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^3.4.0",
+    "eslint-plugin-prettier": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
