--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "add": "^2.0.6",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.0",
-    "lodash.clonedeep": "^4.5.0",
     "prettier": "^1.15.3",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
@@ -15,7 +14,9 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
+    "react-stopwatch": "^2.0.1",
     "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.7",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.1.3",
     "styled-normalize": "^8.0.4",
@@ -24,7 +25,8 @@
   "devDependencies": {
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.4.0",
-    "eslint-plugin-prettier": "^3.0.1"
+    "eslint-plugin-prettier": "^3.0.1",
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
