--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "add": "^2.0.6",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.0",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.isempty": "^4.4.0",
     "prettier": "^1.15.3",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
@@ -14,11 +16,12 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
-    "react-stopwatch": "^2.0.1",
+    "react-stopwatch": "^2.0.2",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.7",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.1.3",
+    "styled-components-breakpoint": "^2.1.1",
     "styled-normalize": "^8.0.4",
     "yarn": "^1.13.0"
   },
@@ -35,8 +38,7 @@
     "eject": "react-scripts eject",
     "lint": "eslint src/*",
     "prettier": "prettier --single-quote --write",
-    "predeploy": "yarn build",
-    "deploy": "now"
+    "now-build": "react-scripts build && mv build dist"
   },
   "husky": {
     "hooks": {
