--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "Minesweeper",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "dependencies": {
     "add": "^2.0.6",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.0",
+    "lodash.chunk": "^4.2.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.isempty": "^4.4.0",
     "prettier": "^1.15.3",
